--- a/table.html
+++ b/table.html
@@ -15,16 +15,16 @@
         table{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             border-collapse: collapse;
-            table-layout: auto; /* optional — it's the default */
-  width: auto; /* let it size naturally */
-        }
-        th,td{
-            text-align: center;
-            padding: 18px;
-                  border: 1px solid #ccc;
-
+              width: auto;
+              table-layout: auto;
 
         }
+      td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
         tr:nth-child(even){
             background-color: rgb(181, 189, 189);
         }
