frontend_upskills imagers

--- a/textformat.html
+++ b/textformat.html
@@ -13,6 +13,8 @@
 <p>  
     <p>Not to be confused with Information science or Computer science.
 </p>
+<img src="../web_devloper/images/web_dev.jpg" width="300px" align="right">
+</img>
 <p><b>Data science </b>is an interdisciplinary academic field<sup>[1] </sup>that uses statistics, scientific computing, scientific methods, processing, scientific visualization, algorithms and systems to extract or extrapolate knowledge from potentially noisy, structured, or unstructured data.<sup>[2]</sup>
     <br>
 
