--- a/button.html
+++ b/button.html
@@ -1,25 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Example</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login Page Example</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    h1 {
+      color: #333;
+    }
+
+    .login-container {
+      background-color: #fff;
+      padding: 20px 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      margin-top: 20px;
+    }
+
+    .login-container h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .login-container input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    .login-container button {
+      width: 100%;
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .login-container button:hover {
+      background-color: #45a049;
+    }
+
+    #myButton {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #2196F3;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    #myButton:hover {
+      background-color: #1976D2;
+    }
+  </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+  <h1>Hello, World!</h1>
 
-    <!-- Button -->
-    <button id="myButton">Click Me</button>
+  <!-- Login Form -->
+  <div class="login-container">
+    <h2>Login</h2>
+    <input type="text" id="username" placeholder="Username" />
+    <input type="password" id="password" placeholder="Password" />
+    <button id="loginBtn">Login</button>
+  </div>
 
-    <!-- JavaScript to add functionality -->
-    <script>
-        // Select the button
-        const button = document.getElementById('myButton');
+  <!-- Existing Button -->
+  <button id="myButton">Click Me</button>
 
-        // Add a click event listener
-        button.addEventListener('click', function() {
-            alert('Button clicked!');
-        });
-    </script>
+  <!-- JavaScript -->
+  <script>
+    // Button functionality
+    const button = document.getElementById('myButton');
+    button.addEventListener('click', function() {
+      alert('Button clicked!');
+    });
+
+    // Login functionality
+    const loginBtn = document.getElementById('loginBtn');
+    loginBtn.addEventListener('click', function() {
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+
+      if (username === "admin" && password === "1234") {
+        alert("Login successful!");
+      } else {
+        alert("Invalid username or password");
+      }
+    });
+  </script>
 </body>
 </html>
