--- a/button.html
+++ b/button.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button Example</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Multiple Buttons Example</title>
 </head>
-
 <body>
-    <h1>Hello, World!</h1>
+  <h1>Hello, World!</h1>
 
-    <!-- Button -->
-    <button id="myButton">Click Me</button>
+  <!-- Buttons -->
+  <button id="btn1">Button 1</button>
+  <button id="btn2">Button 2</button>
+  <button id="btn3">Button 3</button>
+  <button id="btn4">Button 4</button>
+  <button id="btn5">Button 5</button>
 
-    <!-- JavaScript to add functionality -->
-    <script>
-        // Select the button
-        const button = document.getElementById('myButton');
-
-        // Add a click event listener
-        button.addEventListener('click', function() {
-            alert('Button clicked!');
-        });
-    </script>
+  <!-- JavaScript -->
+  <script>
+    document.getElementById('btn1').addEventListener('click', () => alert('Button 1 clicked!'));
+    document.getElementById('btn2').addEventListener('click', () => alert('Button 2 clicked!'));
+    document.getElementById('btn3').addEventListener('click', () => alert('Button 3 clicked!'));
+    document.getElementById('btn4').addEventListener('click', () => alert('Button 4 clicked!'));
+    document.getElementById('btn5').addEventListener('click', () => alert('Button 5 clicked!'));
+  </script>
 </body>
 </html>
