--- a/button.html
+++ b/button.html
@@ -16,6 +16,8 @@
   <button id="btn5">Button 5</button>
   <button id="btn6">Button 6 (Change Background)</button>
   <button id="btn7">Button 7 (Show Time)</button>
+  <button id="btn8">Button 8 (Change Heading)</button>
+
 
   <!-- JavaScript -->
   <script>
@@ -35,6 +37,9 @@
     document.getElementById('btn7').addEventListener('click', () => {
       alert('Current Date & Time: ' + new Date().toLocaleString());
     });
+    document.getElementById('btn8').addEventListener('click', () => {
+    document.querySelector('h1').textContent = "Heading Changed!";
+  });
   </script>
 </body>
 </html>
