--- a/button.html
+++ b/button.html
@@ -14,6 +14,7 @@
   <button id="btn3">Button 3</button>
   <button id="btn4">Button 4</button>
   <button id="btn5">Button 5</button>
+  <button id="btn8">Button 8 (Change Heading)</button>
 
   <!-- JavaScript -->
   <script>
@@ -22,6 +23,11 @@
     document.getElementById('btn3').addEventListener('click', () => alert('Button 3 clicked!'));
     document.getElementById('btn4').addEventListener('click', () => alert('Button 4 clicked!'));
     document.getElementById('btn5').addEventListener('click', () => alert('Button 5 clicked!'));
+    // Button 8: change the main heading text
+    document.getElementById('btn8').addEventListener('click', () => {
+      const h = document.querySelector('h1');
+      if (h) h.textContent = 'Heading Changed!';
+    });
   </script>
 </body>
 </html>
