--- a/css/da06/index.html
+++ b/css/da06/index.html
@@ -4,42 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .container{
-            border: 1px solid lightblue;
-            width: 25vw;
-            height: 25vw;
-            background-color: lightsalmon;
-            margin: auto;
-            margin-top: 12px;
-        }
-        .box1{
-            width: 6vw;
-            height: 6vw;
-            display: inline-block;
-            background-color: rgb(0, 255, 200);
-        }
-           .box2{
-            width: 6vw;
-            height: 6vw;
-             display: inline-block;
-            background-color: rgb(64, 255, 0);
-            position: relative;
-           
-        }
-           .box3{
-            width: 6vw;
-            height: 6vw;
-             display: inline-block;
-            background-color: rgb(0, 255, 229);
-        }
-           .box4{
-            width: 6vw;
-            height: 6vw;
-             display: inline-block;
-            background-color: rgb(255, 0, 162);
-        }
-    </style>
+ <style>
+.container{
+    border: 1px solid lightblue;
+    width: 25vw;
+    height: 25vw;
+    background-color: lightsalmon;
+    margin: auto;
+    margin-top: 12px;
+    position: relative;
+}
+
+.box1, .box2, .box3, .box4 {
+    width: 6vw;
+    height: 6vw;
+    display: inline-block;
+}
+
+.box1 { background: rgb(0,255,200); }
+
+.box2 {
+    background: rgb(64,255,0);
+    position: absolute;
+    bottom: 10px;
+}
+
+.box3 {
+    background: rgb(0,255,229);
+    position: fixed;
+    bottom: 20px;
+    right: 50px;
+}
+
+.box4 { background: rgb(255,0,162); }
+</style>
+
 </head>
 <body>
     <div class="container">
