--- a/css/project/grid/grid.html
+++ b/css/project/grid/grid.html
@@ -21,13 +21,62 @@
         <header class="navbar">
             <h2>Dashboard Overview</h2>
         </header>
-        <div class="wrapper">
-            <div class="box box1">One</div>
-            <div class="box box2">Two</div>
-            <div class="box box3">Three</div>
-            <div class="box box4">Four</div>
-            <div class="box box5">Five</div>
-        </div>
+  <div class="product-grid">
+  <div class="card">
+    <img src="https://picsum.photos/300/200?1" alt="">
+    <h3>Product 1</h3>
+    <p>$29.99</p>
+  </div>
+
+  <div class="card">
+    <img src="https://picsum.photos/300/200?2" alt="">
+    <h3>Product 2</h3>
+    <p>$39.99</p>
+  </div>
+
+  <div class="card">
+    <img src="https://picsum.photos/300/200?3" alt="">
+    <h3>Product 3</h3>
+    <p>$19.99</p>
+  </div>
+
+  <div class="card">
+    <img src="https://picsum.photos/300/200?4" alt="">
+    <h3>Product 4</h3>
+    <p>$49.99</p>
+  </div>
+    <div class="card">
+    <img src="https://picsum.photos/300/200?4" alt="">
+    <h3>Product 4</h3>
+    <p>$49.99</p>
+  </div>
+    <div class="card">
+    <img src="https://picsum.photos/300/200?4" alt="">
+    <h3>Product 4</h3>
+    <p>$49.99</p>
+  </div>
+    <div class="card">
+    <img src="https://picsum.photos/300/200?4" alt="">
+    <h3>Product 4</h3>
+    <p>$49.99</p>
+  </div>
+    <div class="card">
+    <img src="https://picsum.photos/300/200?4" alt="">
+    <h3>Product 4</h3>
+    <p>$49.99</p>
+  </div>
+    <div class="card">
+    <img src="https://picsum.photos/300/200?4" alt="">
+    <h3>Product 4</h3>
+    <p>$49.99</p>
+  </div>
+    <div class="card">
+    <img src="https://picsum.photos/300/200?4" alt="">
+    <h3>Product 4</h3>
+    <p>$49.99</p>
+  </div>
+</div>
+
     </div>
 
 
