--- a/js/dom_17-12-2025/index.html
+++ b/js/dom_17-12-2025/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <div id="root">
-    <h1 id="first">Hello Coder Army</h1>
+    <h1 id="first" class="first">Hello Coder Army</h1>
+        <h1 id="first" class="first">Hello Coder Army</h1>
+
+            <h1 id="first" class="first">Hello Coder Army</h1>
+    <h1 id="first" class="first">Hello Coder Army</h1>
+    <h1 id="first" class="first">Hello Coder Army</h1>
+
     <h2 id="secound">Hello Coder Army</h2>
 <ul id="third" class="header2" style="background-color: yellow;">
 
