todo list -subham

--- a/js/form20-12-25/quizcomped.html
+++ b/js/form20-12-25/quizcomped.html
@@ -104,10 +104,12 @@
 <body>
 
   <form id="form_acess">
+      <div id="form-result"></div>
+
   </form>
     
-  <div id="form-result"></div>
 
-  <script type="module" src="random.js"></script>
+  <!-- <script type="module" src="random.js"></script> -->
+    <script type="module" src="quizsample.js"></script>
 </body>
 </html>
